--- a/src/app/modificar-cursos/modificar-cursos.component.html
+++ b/src/app/modificar-cursos/modificar-cursos.component.html
@@ -1,8 +1,10 @@
-<h1>Modificar Curso</h1>
+<h1>Alta / Modificar Curso</h1>
 
 <p>Id <input type="number" [(ngModel)]="curso.id"></p>
 <p>Nombre <input type="text" [(ngModel)]="curso.nombre"></p>
 <p>Duración <input type="number" [(ngModel)]="curso.duracion"></p>
 <p>Nivel <input type="number" [(ngModel)]="curso.nivel" min="0" max="2"></p>
 
-<button (click)="updateCurso()" routerLink="">Modificar</button>
+<button (click)="updateCurso()" routerLink="">Aceptar</button>
+
+<button routerLink="">Cancelar</button>
